name:                pretty-latex
version:             0.1.0.1
synopsis:            LaTeX pretty printing
homepage:            https://github.com/sdiehl/pretty-latex
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2014 Stephen Diehl
Category:            LaTeX
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.1
Bug-Reports:         https://github.com/sdiehl/pretty-latex/issues

Description:
  Utilities for pretty printing LaTeX expressions from Haskell
Source-Repository head
    Type: git
    Location: git@github.com:sdiehl/pretty-latex.git

library
  exposed-modules:     Pretty.Latex

  ghc-options:        -Wall -fwarn-tabs -O2 
  cc-options:         -O3
  build-depends:      
      base >=4.6 && <4.7
    , pretty      >= 1.1 && <1.2

  default-language:   Haskell2010
  Hs-source-dirs:     src
